Fixed Horizontal Scroll
Removed padding left on the header, which was causing a scroll bar to
appear.

--- a/main.css
+++ b/main.css
@@ -10,7 +10,6 @@ body {
 	height: 40px;
 	top: 0px;
 	text-align: left;
-	padding-left: 10px;
 	background: #D80000;
 }
 #header-inside {
